# venture_image

./: .dockerignore  .gitignore  Dockerfile  README.md  batch_file_rename.py  directory_size.py  docker-compose.yml  file_finder.py  find_dupe_files.py  find_dupe_images_multi_thread.py  find_dupe_images_single_thread.py  image_converter.py  justfile  photo_duplicate_content_finder.py  photo_duplicate_content_finder_progress.py  photo_duplicate_metadata_finder.py  photo_duplicate_remover.py  photo_location_sorter.py  photo_sorter.py  pyproject.toml  remove_file_in_directory.py  remove_folder_in_directory.py  scan_spiltter.py  scan_splitter_gh.py  web_to_jpeg.py  webp_to_jpeg.py
src/vi_app/: cli.py  version.py
src/vi_app/api/: deps.py  main.py
src/vi_app/commands/: cleanup.py  common.py  convert.py  convert_images.py  convert_videos.py  dedup.py
src/vi_app/core/: config.py  errors.py  logging.py  media_types.py  paths.py  progress.py  registry.py  rich_progress.py
src/vi_app/modules/cleanup/: router.py  schemas.py  service.py
src/vi_app/modules/cleanup/strategies/: base.py  by_date.py  by_location.py
src/vi_app/modules/convert/: router.py  schemas.py  service.py
src/vi_app/modules/convert_images/: router.py  schemas.py  service.py
src/vi_app/modules/dedup/: router.py  schemas.py  service.py
src/vi_app/modules/dedup/strategies/: base.py  content.py  image_base.py  metadata.py
src/vi_app/modules/sort/: router.py  schemas.py  service.py
src/vi_app/modules/sort/strategies/: by_date.py  by_location.py
tools/: bench_convert_mp4.py
